--- a/docs/zh/14-reference/05-connector/14-java.mdx
+++ b/docs/zh/14-reference/05-connector/14-java.mdx
@@ -127,7 +127,9 @@ WKB 规范请参考[Well-Known Binary (WKB)](https://libgeos.org/specifications/
 - springbootdemo：Springboot 中使用 taos-jdbcdriver。
 - consumer-demo：Consumer 消费 TDengine TSDB 数据示例，可通过参数控制消费速度。
 
-请参考：[JDBC example](https://github.com/taosdata/TDengine/tree/main/docs/examples/JDBC)
+请参考：
+- [JDBC JDK17 example](https://github.com/taosdata/TDengine/tree/main/docs/examples/JDBC)
+- [JDBC JDK8 example](https://github.com/taosdata/TDengine/tree/ver-3.4.0.0/docs/examples/JDBC)
 
 ## 常见问题
 
